packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_errors/unexpected_pkgbase_property.srcinfo
pkgbase = test
	pkgver = 1.0.0
	pkgrel = 1
	bogus_field = lol

pkgname = test
